Added filter country and team